--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "PdfSettings": {
-    "pdfSaveDirectory": "C:/PDFOutput",
-    "outputDirectory": "C:/ECMOutput"
+    "pdfSaveDirectory": "C:/Test",
+    "outputDirectory": "C:/Test"
   },
   "BarcodeProfile": {
     "XPosition": 10,
