--- a/ECMDocumentHelper.csproj
+++ b/ECMDocumentHelper.csproj
@@ -76,6 +76,9 @@
     <None Update="Fonts\LibreBarcode128-Regular.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Fonts\LibreBarcode128Text-Regular.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
